Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91461

GridView: resizing items causes view to reposition incorrectly

    XMLWordPrintable

Details

    • d0d6f70c91 (qt/qtdeclarative/dev) c8ec32c64c (qt/qtdeclarative/6.3) c8ec32c64c (qt/tqtc-qtdeclarative/6.3) d0d6f70c91 (qt/tqtc-qtdeclarative/dev) c8ec32c64c (qt/tqtc-qtdeclarative/6.3.1) 801b6c7c19 (qt/tqtc-qtdeclarative/6.2)

    Description

      When a GridView with large number of items has it's items resized before calls to functions such as positionViewAtBeginning or positionViewAtEnd can cause the view to position incorrectly so that none of them items would be visible.

      Steps to reproduce the issue:

      1. Run the attached example
      2. Follow the instructions displayed within the example to change the item size and then reposition the view using the buttons

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            richard Richard Moe Gustavsen
            miikapernu Miika Pernu
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: